# Study-Monitor

./: .gitignore  README.md  README_CN.md  README_EN.md
chrome-extension/: background.js  manifest.json  popup.html  popup.js
cloud-api/: package-lock.json  package.json  server.js
desktop-app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop-app/src/: App.vue  main.ts  style.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: db.rs  http_server.rs  main.rs
desktop-app/src/components/ui/: badge.vue  button.vue  index.ts  input.vue  progress.vue
desktop-app/src/composables/: useTheme.ts
desktop-app/src/views/: Courses.vue  Dashboard.vue  Goals.vue  Statistics.vue  Sync.vue
mobile-app/: README.md  pubspec.yaml
mobile-app/android/app/: build.gradle.kts
mobile-app/android/app/src/main/: AndroidManifest.xml
mobile-app/ios/Runner/: Info.plist
mobile-app/ios/Runner.xcodeproj/: project.pbxproj
mobile-app/lib/: main.dart
mobile-app/lib/screens/: home_screen.dart  settings_screen.dart  splash_screen.dart
mobile-app/lib/services/: api_service.dart
mobile-app/linux/: CMakeLists.txt
mobile-app/linux/runner/: my_application.cc
mobile-app/macos/Runner.xcodeproj/: project.pbxproj
mobile-app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile-app/macos/Runner/Configs/: AppInfo.xcconfig
mobile-app/test/: widget_test.dart
mobile-app/web/: index.html  manifest.json
mobile-app/windows/: CMakeLists.txt
mobile-app/windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
